[gd_scene load_steps=53 format=3 uid="uid://81vub78cngl3"]

[ext_resource type="Script" uid="uid://b0dodspanuiwk" path="res://scenes/enemy_walker_walls.gd" id="1_53he0"]
[ext_resource type="Texture2D" uid="uid://cauminoav2qtv" path="res://sprites/horu/images/enemy_wall_spr_0.png" id="2_h33ti"]
[ext_resource type="Texture2D" uid="uid://bfmd1soivmlg7" path="res://sprites/dead_fire_spr_0.png" id="2_tbwkb"]
[ext_resource type="Texture2D" uid="uid://de76qjhauiwlw" path="res://sprites/horu/images/enemy_berserk_wall_spr_0.png" id="3_5u07g"]
[ext_resource type="Texture2D" uid="uid://cxc5th2r8hfpc" path="res://sprites/dead_fire_spr_1.png" id="3_ulw2m"]
[ext_resource type="Texture2D" uid="uid://bopbftmj4ka0j" path="res://sprites/horu/images/enemy_berserk_wall_spr_1.png" id="4_cv7x8"]
[ext_resource type="Texture2D" uid="uid://deqbcbnajy7k5" path="res://sprites/dead_fire_spr_2.png" id="4_fs5nf"]
[ext_resource type="Texture2D" uid="uid://chym4cp8lus1i" path="res://sprites/horu/images/enemy_berserk_wall_spr_2.png" id="5_gy1m3"]
[ext_resource type="Texture2D" uid="uid://d262pksg7wxxo" path="res://sprites/horu/images/enemy_wall_spr_1.png" id="6_g6o2n"]
[ext_resource type="Texture2D" uid="uid://bl7nqn7gud321" path="res://sprites/horu/images/enemy_wall_spr_2.png" id="7_h0l26"]
[ext_resource type="Texture2D" uid="uid://oanfk60rxitm" path="res://sprites/horu/images/enemy_cool_face_spr_0.png" id="8_mdasq"]
[ext_resource type="Texture2D" uid="uid://cqa5pblpiej1l" path="res://sprites/horu/images/enemy_cool_face_spr_1.png" id="9_tb81d"]
[ext_resource type="Texture2D" uid="uid://1b3iqbu18u17" path="res://sprites/horu/images/enemy_cool_face_spr_2.png" id="10_jlah5"]
[ext_resource type="Texture2D" uid="uid://cnh54rkrceo" path="res://sprites/horu/images/enemy_anger_spr_0.png" id="11_aq6to"]
[ext_resource type="Texture2D" uid="uid://b77wwtbc2frr" path="res://sprites/horu/images/enemy_anger_spr_1.png" id="12_kwrvl"]
[ext_resource type="Texture2D" uid="uid://bt28oxgjtkk14" path="res://sprites/horu/images/enemy_anger_spr_2.png" id="13_wj0ph"]
[ext_resource type="Texture2D" uid="uid://c1fa6mp1vngqq" path="res://sprites/horu/images/enemy_danger_spr_0.png" id="14_fa8fp"]
[ext_resource type="Texture2D" uid="uid://q0bln7b1u2oh" path="res://sprites/horu/images/enemy_danger_spr_1.png" id="15_krmdw"]
[ext_resource type="Texture2D" uid="uid://1ybi7osvso8b" path="res://sprites/horu/images/enemy_danger_spr_2.png" id="16_brd5u"]
[ext_resource type="Texture2D" uid="uid://capc1hdlw0gpl" path="res://sprites/horu/images/stars1.png" id="17_lq5dc"]
[ext_resource type="Texture2D" uid="uid://caxf4k5okg3cr" path="res://sprites/horu/images/stars2.png" id="18_3nj8t"]
[ext_resource type="Texture2D" uid="uid://bpaljgkr5iu14" path="res://sprites/horu/images/stars3.png" id="19_0ghtu"]
[ext_resource type="Script" uid="uid://bm56n56ud6m6r" path="res://scenes/ItemEnemy.gd" id="23_nhups"]
[ext_resource type="Shader" uid="uid://dl6p4elpfxi71" path="res://scenes/Item.gdshader" id="24_8mv7n"]
[ext_resource type="Texture2D" uid="uid://c6gf7vjf30biq" path="res://sprites/coin.png" id="25_hlv3i"]
[ext_resource type="Texture2D" uid="uid://cog7sk80ykf4o" path="res://sprites/bomb.png" id="26_0k8g2"]
[ext_resource type="Texture2D" uid="uid://bej4v4xthspa2" path="res://sprites/box.png" id="27_454ia"]
[ext_resource type="Texture2D" uid="uid://bljcg74u2x5sd" path="res://sprites/invisibility.png" id="28_eayg7"]
[ext_resource type="Texture2D" uid="uid://b3tca6epdaoix" path="res://sprites/rock.png" id="29_nqexf"]
[ext_resource type="Texture2D" uid="uid://df545tsy68qs1" path="res://sprites/growing_plant.png" id="30_3r57n"]
[ext_resource type="Texture2D" uid="uid://pm7mhxqnqxtq" path="res://sprites/radar.png" id="31_yt30w"]
[ext_resource type="Texture2D" uid="uid://mpqlvpcht35a" path="res://sprites/simul_box.png" id="32_qdl5y"]
[ext_resource type="Texture2D" uid="uid://trxeowv3jmbb" path="res://sprites/smoke_bomb.png" id="33_w7xsn"]
[ext_resource type="Texture2D" uid="uid://csp0ardyjl54b" path="res://sprites/spring.png" id="34_pykeo"]
[ext_resource type="Texture2D" uid="uid://c3wmt7870xukn" path="res://sprites/teleporter_box.png" id="35_hhtb3"]
[ext_resource type="Texture2D" uid="uid://cjg71ls267rbj" path="res://sprites/question_mark.png" id="36_wpcxn"]
[ext_resource type="FontFile" uid="uid://cqp5o2vpb07yg" path="res://fonts/prstartk.ttf" id="37_t6jgr"]
[ext_resource type="Texture2D" uid="uid://b3n7eech0mndx" path="res://sprites/arrows1.png" id="38_yh8u5"]
[ext_resource type="Texture2D" uid="uid://dkompgmyj4pmk" path="res://sprites/arrows2.png" id="39_78j7d"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0vk2b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tbwkb")
}, {
"duration": 1.0,
"texture": ExtResource("3_ulw2m")
}, {
"duration": 1.0,
"texture": ExtResource("4_fs5nf")
}],
"loop": true,
"name": &"dead_fire",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_h33ti")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_5u07g")
}, {
"duration": 1.0,
"texture": ExtResource("4_cv7x8")
}, {
"duration": 1.0,
"texture": ExtResource("5_gy1m3")
}],
"loop": true,
"name": &"killing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_h33ti")
}],
"loop": true,
"name": &"stunned",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_h33ti")
}, {
"duration": 1.0,
"texture": ExtResource("6_g6o2n")
}, {
"duration": 1.0,
"texture": ExtResource("7_h0l26")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_efk2u"]
animations = [{
"frames": [],
"loop": true,
"name": &"dead_fire",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_mdasq")
}, {
"duration": 1.0,
"texture": ExtResource("9_tb81d")
}, {
"duration": 1.0,
"texture": ExtResource("10_jlah5")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_aq6to")
}, {
"duration": 1.0,
"texture": ExtResource("12_kwrvl")
}, {
"duration": 1.0,
"texture": ExtResource("13_wj0ph")
}],
"loop": true,
"name": &"killing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_fa8fp")
}, {
"duration": 1.0,
"texture": ExtResource("15_krmdw")
}, {
"duration": 1.0,
"texture": ExtResource("16_brd5u")
}],
"loop": true,
"name": &"stunned",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_mdasq")
}, {
"duration": 1.0,
"texture": ExtResource("9_tb81d")
}, {
"duration": 1.0,
"texture": ExtResource("10_jlah5")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_44h00"]
size = Vector2(32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_6yeio"]
radius = 15.7003

[sub_resource type="Animation" id="Animation_k8fva"]
resource_name = "killing"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1.5), Vector2(1.5, 0.8), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b5rsm"]
_data = {
&"killing": SubResource("Animation_k8fva")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_3tn2l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_lq5dc")
}, {
"duration": 1.0,
"texture": ExtResource("18_3nj8t")
}, {
"duration": 1.0,
"texture": ExtResource("19_0ghtu")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2pabc"]
size = Vector2(30, 21)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8o5a0"]
shader = ExtResource("24_8mv7n")
shader_parameter/shine_color = Color(1, 1, 1, 1)
shader_parameter/shine_speed = 2.4
shader_parameter/shine_size = 0.01
shader_parameter/white = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_44owx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_hlv3i")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6hsh7"]
resource_local_to_scene = true
shader = ExtResource("24_8mv7n")
shader_parameter/shine_color = Color(1, 1, 1, 1)
shader_parameter/shine_speed = 3.0
shader_parameter/shine_size = 0.01
shader_parameter/white = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_x2tlk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_0k8g2")
}],
"loop": true,
"name": &"bomb",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("27_454ia")
}],
"loop": true,
"name": &"clone",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_hlv3i")
}],
"loop": true,
"name": &"coin",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("28_eayg7")
}],
"loop": true,
"name": &"invisibility",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("29_nqexf")
}],
"loop": true,
"name": &"muffin",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("30_3r57n")
}],
"loop": true,
"name": &"plant",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("31_yt30w")
}],
"loop": true,
"name": &"radar",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("32_qdl5y")
}],
"loop": true,
"name": &"simul",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("33_w7xsn")
}],
"loop": true,
"name": &"smoke",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("34_pykeo")
}],
"loop": true,
"name": &"spring",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("35_hhtb3")
}],
"loop": true,
"name": &"teleport",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("36_wpcxn")
}],
"loop": true,
"name": &"unknown",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_bhp31"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("38_yh8u5")
}, {
"duration": 1.0,
"texture": ExtResource("39_78j7d")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="EnemyWalkerWalls" type="CharacterBody2D"]
collision_layer = 256
collision_mask = 256
script = ExtResource("1_53he0")

[node name="sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(16, -16)
sprite_frames = SubResource("SpriteFrames_0vk2b")
animation = &"idle"

[node name="eyes" type="AnimatedSprite2D" parent="sprite"]
sprite_frames = SubResource("SpriteFrames_efk2u")
animation = &"idle"

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2(16, -16)
shape = SubResource("RectangleShape2D_44h00")

[node name="Area" type="Area2D" parent="."]
position = Vector2(16, -16)
collision_layer = 33
collision_mask = 33

[node name="collider" type="CollisionShape2D" parent="Area"]
shape = SubResource("CircleShape2D_6yeio")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b5rsm")
}
speed_scale = 2.0

[node name="ray_floor" type="RayCast2D" parent="."]
position = Vector2(3, -16)
target_position = Vector2(0, 18)
collision_mask = 2

[node name="ray_wall" type="RayCast2D" parent="."]
position = Vector2(16, -24)
target_position = Vector2(18, 0)
collision_mask = 2

[node name="stars_stunned" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(16, -21)
scale = Vector2(1.3, 1.3)
sprite_frames = SubResource("SpriteFrames_3tn2l")
autoplay = "default"
frame_progress = 0.742966

[node name="Item" type="Area2D" parent="."]
visible = false
position = Vector2(1, 16)
script = ExtResource("23_nhups")

[node name="collider" type="CollisionShape2D" parent="Item"]
position = Vector2(0, -10.5)
shape = SubResource("RectangleShape2D_2pabc")

[node name="sprite" type="AnimatedSprite2D" parent="Item"]
material = SubResource("ShaderMaterial_8o5a0")
position = Vector2(-1, -48)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_44owx")

[node name="display" type="Node2D" parent="Item"]
visible = false
position = Vector2(0, -87)

[node name="back2" type="ColorRect" parent="Item/display"]
z_index = 4096
offset_left = -303.0
offset_top = -32.0
offset_right = 247.0
offset_bottom = 47.0
metadata/_edit_use_anchors_ = true

[node name="back" type="ColorRect" parent="Item/display"]
z_index = 4096
offset_left = -302.0
offset_top = -31.0
offset_right = 246.0
offset_bottom = 46.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="sprite" type="AnimatedSprite2D" parent="Item/display/back"]
material = SubResource("ShaderMaterial_6hsh7")
position = Vector2(45, 61)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_x2tlk")
animation = &"invisibility"
offset = Vector2(0, -16)

[node name="lbl_item" type="Label" parent="Item/display/back"]
layout_mode = 0
offset_left = 84.0
offset_top = 2.0
offset_right = 508.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("37_t6jgr")
text = "==CLONE==
Generates a copy of you. ddhydgasgdsagdsajd"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="arrows" type="AnimatedSprite2D" parent="Item/display/back"]
position = Vector2(520, 39)
sprite_frames = SubResource("SpriteFrames_bhp31")
autoplay = "default"

[connection signal="body_entered" from="Area" to="." method="_on_area_body_entered"]
[connection signal="body_entered" from="Item" to="Item" method="_on_body_entered"]
[connection signal="body_exited" from="Item" to="Item" method="_on_body_exited"]
